tests/NormalTests/paczka1/fuzzy1/32454683.err
Error in line 3: A466 S632 87,12
Error in line 4: GZYv7Ge74 S61 22,4
Error in line 2: Bxjdl S632 10,4
Error in line 6: GZYv7Ge74 S632 59,8
Error in line 13: 9jNJRYeOEp S61 26,9
Error in line 15: 5vWmabAjSCR S632 34,8
